--- a/Ecommerce.ipynb
+++ b/Ecommerce.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Ecommerce.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO2PQPAo7suW27W1XZ+iu35",
+      "authorship_tag": "ABX9TyMdITsGLw/BkytaPYRu1oA1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -620,40 +620,26 @@
     {
       "cell_type": "code",
       "source": [
-        "df[(df['CC Provider'] == 'American Express') & (df['Purchase Price'] > 95)].count()"
+        "df[(df['CC Provider'] == 'American Express') & (df['Purchase Price'] > 95)]['Email'].count()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YxApZ26gIdjC",
-        "outputId": "79d18441-0bd6-4fdd-d245-92e0af3a8ff6"
+        "outputId": "abad3f1a-1aa8-4dde-faa8-af35568d3c7b"
       },
-      "execution_count": 78,
+      "execution_count": 104,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Address             39\n",
-              "Lot                 39\n",
-              "AM or PM            39\n",
-              "Browser Info        39\n",
-              "Company             39\n",
-              "Credit Card         39\n",
-              "CC Exp Date         39\n",
-              "CC Security Code    39\n",
-              "CC Provider         39\n",
-              "Email               39\n",
-              "Job                 39\n",
-              "IP Address          39\n",
-              "Language            39\n",
-              "Purchase Price      39\n",
-              "dtype: int64"
+              "39"
             ]
           },
           "metadata": {},
-          "execution_count": 78
+          "execution_count": 104
         }
       ]
     },
