--- a/co5scapper.ipynb
+++ b/co5scapper.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPxAPBjbuT9Qm3lAMbVtfAx",
+      "authorship_tag": "ABX9TyOC57hdtoZUUayrpmRLMfHZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5143,9 +5143,54 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "ProductSoup = soup.find_all(\"div\",class_=\"product-name\")"
+      ],
       "metadata": {
         "id": "nXOjVNvVm6Jz"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ProductSoup"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4v7ENSSToPfu",
+        "outputId": "2fa93120-3f1d-4ea7-83fb-486c15d1af2e"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[<div class=\"product-name\">Aqualens</div>,\n",
+              " <div class=\"product-name\">Aqualens</div>,\n",
+              " <div class=\"product-name\">John Jacobs</div>,\n",
+              " <div class=\"product-name\">Vincent Chase</div>,\n",
+              " <div class=\"product-name\">Vincent Chase</div>,\n",
+              " <div class=\"product-name\">Lenskart Air</div>,\n",
+              " <div class=\"product-name\">Lenskart Air</div>,\n",
+              " <div class=\"product-name\">John Jacobs</div>,\n",
+              " <div class=\"product-name\">Aqualens</div>]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "qhUb4UE1oR_0"
       },
       "execution_count": null,
       "outputs": []
