--- a/co5scapper.ipynb
+++ b/co5scapper.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOC57hdtoZUUayrpmRLMfHZ",
+      "authorship_tag": "ABX9TyMB4RQTlyidu4o2DmsAtpJ0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5144,12 +5144,14 @@
     {
       "cell_type": "code",
       "source": [
-        "ProductSoup = soup.find_all(\"div\",class_=\"product-name\")"
+        "ProductSoup = soup.find_all(\"div\",class_=\"product-name\")\n",
+        "pricesoup = soup.find_all(\"span\",class_=\"text-color-dark-blue fw700\")\n",
+        "ratingsoup = soup.find_all(\"span\", class_=\"rating-value\")"
       ],
       "metadata": {
         "id": "nXOjVNvVm6Jz"
       },
-      "execution_count": 6,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -5162,9 +5164,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4v7ENSSToPfu",
-        "outputId": "2fa93120-3f1d-4ea7-83fb-486c15d1af2e"
+        "outputId": "f9ecadee-14b5-4172-c4da-65a03921ba30"
       },
-      "execution_count": 7,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5182,7 +5184,189 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lens_names = []\n",
+        "for i in range(0, len(ProductSoup)):\n",
+        "  lens_names.append(ProductSoup[i].get_text())"
+      ],
+      "metadata": {
+        "id": "qhUb4UE1oR_0"
+      },
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lens_names"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lebxZUndtuzW",
+        "outputId": "ab69a628-d548-4579-ca61-b895b3dfb7ae"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Aqualens',\n",
+              " 'Aqualens',\n",
+              " 'John Jacobs',\n",
+              " 'Vincent Chase',\n",
+              " 'Vincent Chase',\n",
+              " 'Lenskart Air',\n",
+              " 'Lenskart Air',\n",
+              " 'John Jacobs',\n",
+              " 'Aqualens']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pricesoup"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2JwPZz87vAZO",
+        "outputId": "77f5578f-b362-4776-fbe8-c2b29360afb1"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[<span class=\"text-color-dark-blue fw700\"><span>₹</span>240</span>,\n",
+              " <span class=\"text-color-dark-blue fw700\"><span>₹</span>123</span>,\n",
+              " <span class=\"text-color-dark-blue fw700\"><span>₹</span>3000</span>,\n",
+              " <span class=\"text-color-dark-blue fw700\"><span>₹</span>1199</span>,\n",
+              " <span class=\"text-color-dark-blue fw700\"><span>₹</span>1199</span>,\n",
+              " <span class=\"text-color-dark-blue fw700\"><span>₹</span>1199</span>,\n",
+              " <span class=\"text-color-dark-blue fw700\"><span>₹</span>1199</span>,\n",
+              " <span class=\"text-color-dark-blue fw700\"><span>₹</span>3000</span>,\n",
+              " <span class=\"text-color-dark-blue fw700\"><span>₹</span>440</span>]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lens_prices = []\n",
+        "for i in range(0, len(pricesoup)):\n",
+        "  lens_prices.append(pricesoup[i].get_text())"
+      ],
+      "metadata": {
+        "id": "tKvT7IXwvByO"
+      },
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lens_prices"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aSjq6NWNvMdw",
+        "outputId": "21bdaa3a-07b2-4ab3-86ec-6ccdbd825d3d"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['₹240', '₹123', '₹3000', '₹1199', '₹1199', '₹1199', '₹1199', '₹3000', '₹440']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lens_ratings = []\n",
+        "for i in range(0, len(ratingsoup)):\n",
+        "  lens_ratings.append(ratingsoup[i].get_text())"
+      ],
+      "metadata": {
+        "id": "uH03syqNvhXx"
+      },
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lens_ratings"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JlcVE9bOvqZj",
+        "outputId": "ed6050ba-106b-4d20-9570-e3434310ce72"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['4.8', '4.8', '4.4', '4.6', '4.6', '4.6', '4.6', '4.4', '4.7']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(len(lens_names), len(lens_prices), len(lens_ratings))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BFYvcvF2vsO7",
+        "outputId": "257c6269-2e18-42ff-be39-b57361d1f762"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9 9 9\n"
+          ]
         }
       ]
     },
@@ -5190,7 +5374,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "qhUb4UE1oR_0"
+        "id": "zQyMpg_iv5N1"
       },
       "execution_count": null,
       "outputs": []
