--- a/co3/Rsvmmain.ipynb
+++ b/co3/Rsvmmain.ipynb
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "684197c0",
    "metadata": {},
    "outputs": [
@@ -236,18 +236,18 @@
        "SVC()"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sv.fit(message_tfidf, messages['message'])"
+    "sv.fit(message_tfidf, messages['label'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "f431406f",
    "metadata": {},
    "outputs": [],
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "54dac381",
    "metadata": {},
    "outputs": [
@@ -265,21 +265,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9781048097631012\n"
+      "0.9980258435032304\n"
      ]
     }
    ],
    "source": [
-    "print(metrics.accuracy_score(messages['message'], pred))"
+    "print(metrics.accuracy_score(messages['label'], pred))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29be1cc6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -298,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
